--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ torch>=2.2.0          # auto-installed by sentence-transformers
 requests>=2.31.0
 python-dotenv>=1.0.1  # optional, handy for .env files
 pytest>=7.0
+mem0ai>=0.1
