--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ torch>=2.2.0          # auto-installed by sentence-transformers
 requests>=2.31.0
 python-dotenv>=1.0.1  # optional, handy for .env files
 pytest>=7.0
+tenacity>=8.2
+tiktoken>=0.6
+tqdm>=4.66
