--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # Ignore virtual environment
 venv/
 
-# Ignore secret settings file
-settings.py
+# Ignore environment files
+.env
+.env.local
+.env.*.local
 
 # Python artifacts
 __pycache__/
