handle plain websocket for unreal

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,5 @@ mem0ai>=0.1.0
 elevenlabs>=1.0.0      # for text-to-speech functionality
 flask>=2.3.0           # web framework for API endpoints
 flask-cors>=4.0.0      # for cross-origin requests
-flask-socketio>=5.3.0  # for WebSocket support
+flask-sock>=0.7.0     # for plain WebSocket support
 websockets>=12.0       # for ElevenLabs WebSocket connection
-python-socketio>=5.0.0 # WebSocket client/server
-python-engineio>=4.8.0 # Engine.IO implementation
